--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,13 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-spring.datasource.url=jdbc:mysql://localhost:3306/inventory_db
+spring.datasource.url=jdbc:mysql://localhost:3306/user_management_db
 spring.datasource.username=root
 spring.datasource.password=Suhas@123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
 
-spring.security.user.username=suhas
+spring.security.user.name=suhas
 spring.security.user.password=priya
-secretJWTString=suhashemanthpriyanka1993
+logging.level.org.springframework.security=DEBUG
